# ssh-gpu-checker

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-16-host-recommendation.md  2026-04-16-ssh-gpu-checker.md  2026-07-10-dashboard-default-all-hosts.md  2026-07-10-ssh-gpu-dashboard-mvp.md
docs/superpowers/specs/: 2026-04-16-host-recommendation-design.md  2026-04-16-ssh-gpu-checker-skill-design.md  2026-07-10-ssh-gpu-dashboard-mvp-design.md
skills/check-ssh-gpu/: SKILL.md
src/ssh_gpu_checker/: cli.py  config.py  coordinator.py  dashboard_cli.py  inspect.py  models.py  recommend.py  render.py  snapshot.py  web.py
src/ssh_gpu_checker/static/: dashboard.css  dashboard.js  index.html
tests/: test_cli.py  test_config_parser.py  test_coordinator.py  test_dashboard_cli.py  test_dashboard_launcher.py  test_gpu_parser.py  test_inspect_command.py  test_recommend.py  test_renderer.py  test_snapshot.py  test_web.py
tools/: install_skill.sh
