[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ssh-gpu-checker"
version = "0.2.0"
description = "Check and monitor GPU availability across SSH hosts"
requires-python = ">=3.9"
dependencies = ["fastapi>=0.115,<1", "uvicorn>=0.30,<1"]

[project.optional-dependencies]
test = ["httpx>=0.27,<1"]

[project.scripts]
ssh-gpu-checker = "ssh_gpu_checker.cli:main"
ssh-gpu-dashboard = "ssh_gpu_checker.dashboard_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ssh_gpu_checker = ["static/*.html", "static/*.css", "static/*.js"]
